--- a/templates/prototype/_layout.twig
+++ b/templates/prototype/_layout.twig
@@ -40,7 +40,7 @@
 				<li><em>
 				<a href="../search.php" class="btn">{{ icon('search', 16) }}</a>
 					{% if log %}
-						<a href="../upload.php">{{ icon('upload', 16) }}</a>
+						<a href="../upload_start.php">{{ icon('upload', 16) }}</a>
 						{{ userlink(userdata) }}
 						{% if notification_count > 0 %}
 							<span class="notifs">[{{ notification_count }}]</span>
