--- a/templates/prototype/upload_part1.twig
+++ b/templates/prototype/upload_part1.twig
@@ -53,6 +53,7 @@
 </style>
 {% endblock %}
 {% block content %}
+<h1>Upload</h1>
 <div class="grid">
       <div class="feature col-4">
         <div class="feature-icon bg-primary">
