--- a/forum/templates/_layout.twig
+++ b/forum/templates/_layout.twig
@@ -7,28 +7,36 @@
 		{% if userdata.darkmode %}<link rel="stylesheet" href="../assets/css/darkmode.css" type="text/css">{% endif %}
 		<link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
 		<script src="assets/js/tools.js"></script>
+		<style>
+			.bi {
+			display: inline-block;
+			margin-top: -0.2em;
+			vertical-align: middle;
+			}
+		</style>
 	</head>
 	<body {% if is_android_webview() %}style="zoom:0.6"{% endif %}>
-		<div class="top">
+		<div class="top bg-light">
 			<a href="../"><img class="picon" src="../assets/logo.png"/></a>
 			<ul class="menu left">
-				<li><a href="../" class="btn">Home</a></li>
-				<li><a href="../browse.php" class="btn">Videos</a></li>
-				<li><a href="../music.php" class="btn">Music</a></li>
-				<li><a href="../artwork.php" class="btn">Artwork</a></li>
-				<li><a href="../forum/" class="btn">Forums</a></li>
+				<li><a href="../" class="btn">{{ icon('circle', 16) }} Home</a></li>
+				<li><a href="../browse.php" class="btn">{{ icon('circle', 16) }} Videos</a></li>
+				<li><a href="../music.php" class="btn">{{ icon('circle', 16) }} Music</a></li>
+				<li><a href="../artwork.php" class="btn">{{ icon('circle', 16) }}  Artwork</a></li>
+				<li><a href="../forum/" class="btn">{{ icon('circle', 16) }} Forums</a></li>
 			</ul>
 			<ul class="menu right">
 				<li><em>
-				<a href="../search.php" class="btn"><img src="../assets/icons/search.svg" class="search"></a>
+				<a href="../search.php" class="btn">{{ icon('search', 16) }}</a>
 					{% if log %}
-						<a href="../upload.php">Upload</a>
+						<a href="../upload_start.php">{{ icon('upload', 16) }}</a>
 						{{ userlink(userdata) }}
 						{% if notification_count > 0 %}
 							<span class="notifs">[{{ notification_count }}]</span>
 						{% endif %}
 					{% else %}
-						<a href="../login.php">Login</a>
+						<a href="../login.php">Sign in</a>
+						<a href="../register.php">Register</a>
 					{% endif %}
 				</em></li>
 			</ul>
