--- a/forum/templates/thread.twig
+++ b/forum/templates/thread.twig
@@ -55,8 +55,8 @@
 			<td class="b"></td>
 			<td class="b">
 				<input type="hidden" name="tid" value="{{ tid }}">
-				<input type="submit" name="action" value="Submit">
-				<input type="submit" name="action" value="Preview">
+				<input type="submit" name="action" class="button button-secondary" value="Submit">
+				<input type="submit" name="action" class="button button-secondary"value="Preview">
 			</td>
 		</tr>
 	</table>
