--- a/assets/scss/_buttons.scss
+++ b/assets/scss/_buttons.scss
@@ -10,6 +10,9 @@
 	margin: 2px;
 	margin-bottom: 1em;
 	display: inline-block;
+	box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.2), 0 1px 2px rgba(0, 0, 0, 0.05);
+	text-shadow: 0 1px 1px rgba(255, 255, 255, 0.75);
+	cursor: pointer;
 
 	&:hover {
 		background-color: #dddddd;
@@ -21,6 +24,12 @@
 			background-color: #bbbbee;
 		}
 	}
+}
+
+.button-large {
+    padding: 11px 19px;
+    border-radius: 6px;
+	font-size: 17.5px;
 }
 
 @each $state, $value in $theme-colors {
