--- a/templates/prototype/watch.twig
+++ b/templates/prototype/watch.twig
@@ -65,6 +65,24 @@
 				});
 			{% endif %}
 		</script>
+		<br>
+	<div class="card">
+	  <div class="card-body">
+		<div class="grid">
+			<div class="col-4">
+			Rate this video (unimplemented)
+			<br>
+			<div>
+			{{ icon('star-fill', 16) }}
+			{{ icon('star-fill', 16) }}
+			{{ icon('star-fill', 16) }}
+			{{ icon('star-fill', 16) }}
+			{{ icon('star-fill', 16) }}
+			</div>
+			</div>
+		</div>
+	  </div>
+	</div>
 		<h3>Comments (redesign this later)</h3>
 		<textarea rows="3" placeholder="Not implemented"></textarea>
 				{% for comment in comments %}
