--- a/templates/default/_layout.twig
+++ b/templates/default/_layout.twig
@@ -40,7 +40,7 @@
 	<meta name="msapplication-TileColor" content="#2d89ef">
 	<meta name="msapplication-TileImage" content="/mstile-144x144.png">
 	<meta name="theme-color" content="#0065d8">
-	<title>{% block title %}{% endblock %} - squareBracket Beta 2</title>
+	<title>{% block title %}{% endblock %} - squareBracket Legacy</title>
 </head>
 <style>
 	.bi {
@@ -141,8 +141,6 @@
 		<div class="container">
 			<ul class="nav me-auto">
 				<li class="nav-item"><a href="/" class="nav-link link-light px-2">{{ icon('house-door', 16) }} {{ __("Home") }}</a></li>
-				<li class="nav-item"><a href="browse.php" class="nav-link link-light px-2">{{ icon('play-btn', 16) }} {{ __("Browse") }}</a></li>
-				<li class="nav-item"><a href="channels.php" class="nav-link link-light px-2">{{ icon('people', 16) }} {{ __("Channels") }}</a></li>
 				{% for menu_link in menu_links %}
 					<li class="nav-item"><a href="{{ menu_link.url }}" class="nav-link link-light px-2">{{ icon(menu_link.icon, 16) }} {{ menu_link.name }}</a></li>
 				{% endfor %}
