--- a/templates/default/user.twig
+++ b/templates/default/user.twig
@@ -19,19 +19,19 @@
 </style>
 <div class="bg-channel-background">
 	<div class="col-12 mb-2 mt-0">
-	<div class="p-1 bg-custom-profile text-white">
+	<div class="p-1 bg-primary text-white">
 		<div class="container py-4">
 			<div class="row">
 				<div class="col-md-10">
 					<img class="float-start rounded-circle me-3" src="{{ profile_image(user.name) }}" width="150" alt="pfp">
 					<h1 class="align-top fw-bold mb-0">
-						{{ user.display_name }}{% if user.u_flags == 1 %}<svg data-bs-toggle="tooltip"
+						{{ user.title }}{% if user.u_flags == 1 %}<svg data-bs-toggle="tooltip"
 							data-bs-placement="top" title="{{ __("Checkmarked") }}"
 							style="margin-left: 0.75%;" class="bi" width="32" height="32" fill="currentColor">
 							<use xlink:href="vendor/twbs/bootstrap-icons/bootstrap-icons.svg#patch-check-fill" />
 						</svg>{% endif %}</h1>
 						<div class="fs-4">@{{ user.name }}</div>
-					<p class="fs-6 text-break">{{ user.description }}</p>
+					<p class="fs-6 text-break">{{ user.about }}</p>
 				</div>
 				<div class="col-md-2">
 					<button id="subscribe" class="btn btn-{% if subscribed %}secondary{% else %}warning{% endif %}" type="button" {% if not log or userdata.id == user.id %}disabled{% endif %}>{% if subscribed %}{{ __("Unsubscribe") }}{% else %}{{ __("Subscribe") }}{% endif %}</button>
@@ -57,11 +57,11 @@
 		<div class="card">
 			<div class="card-body">
 				<div class="caption">
-					<h3>{{ __("Uploaded by %s", [user.display_name]) }}</h3>
+					<h3>{{ __("Uploaded by %s", [user.title]) }}</h3>
 					{% for latestVideo in latestVideos %}
 					{{ video_box(latestVideo) }}
 					{% else %}
-					<p>{{ __("There are currently no videos uploaded by %s.", [user.display_name]) }}</p>
+					<p>{{ __("There are currently no videos uploaded by %s.", [user.title]) }}</p>
 					{% endfor %}
 				</div>
 			</div>
@@ -70,7 +70,7 @@
 	<div class="col-md-4 order-1 order-md-2">
 		<div class="card mb-2">
 			<div class="card-body">
-				<h4>{{ __("About %s", [user.display_name]) }}</h4>
+				<h4>{{ __("About %s", [user.title]) }}</h4>
 				<hr>
 				<dl class="row mb-0">
 					<dt class="col-auto">{{ __("Last seen") }}</dt>
