when you forget to commit

--- a/templates/prototype/_layout.twig
+++ b/templates/prototype/_layout.twig
@@ -6,7 +6,8 @@
 	{% block head %}{% endblock %}
 	<link rel="stylesheet" id="bootstrap" href="assets/css/style.css" type="text/css">
 	<script src="https://cdn.jsdelivr.net/npm/js-cookie@rc/dist/js.cookie.min.js"></script>
-	<script src="assets/common.js"></script>
+	<script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
+	<script src="assets/common-sbnext.js"></script>
 	<script> 
 	var $buoop = {required:{e:-6,f:-6,o:-6,s:12,c:-6},insecure:true,api:2021.10 }; 
 	function $buo_f(){ 
