--- a/templates/prototype/components/comment.twig
+++ b/templates/prototype/components/comment.twig
@@ -1,7 +1,7 @@
 <div class="grid" style="gap:0px">
 	<div class="col-1">
-		<a href="user.php?name={{ data.u_username }}">
-			<img class="rounded" style="width:48px" src="{{ profile_image(data.u_username) }}">
+		<a href="user.php?name={{ data.u_name }}">
+			<img class="rounded" style="width:48px" src="{{ profile_image(data.u_name) }}">
 		</a>
 	</div>
 	<div class="col-11">
