--- a/templates/2012e/_layout.twig
+++ b/templates/2012e/_layout.twig
@@ -69,6 +69,167 @@
          yt.setConfig('TIMING_ACTION', 'glo');
       </script>
       {% block content %}{% endblock %}
+   <!-- end pagemiddle -->
+   <!-- begin pagebottom -->
+   <div id="footer-container">
+      <div id="footer">
+         <div class="horizontal-rule ">
+            <span class="first"></span>
+            <span class="second"></span>
+            <span class="third"></span>
+         </div>
+         <div id="footer-logo">
+            <a href="/web/20120118121554/http://www.youtube.com/" title="YouTube home">
+            <img id="logo" src="//web.archive.org/web/20120118121554im_/http://s.ytimg.com/yt/img/pixel-vfl3z5WfW.gif" alt="squareBracket">
+            </a>
+            <span class="copyright" dir="ltr">squareBracket Beta 2</span>
+            <span id="footer-divider"></span>
+         </div>
+         <div id="footer-main">
+            <ul id="footer-links-primary">
+               <li><a href="https://web.archive.org/web/20120118121554/http://www.google.com/support/youtube/bin/static.py?p=homepage&amp;page=start.cs&amp;hl=en_US" onmousedown="yt.analytics.trackEvent('Footer', 'link', 'Help');">Help</a></li>
+               <li><a href="/web/20120118121554/http://www.youtube.com/t/about_youtube" onmousedown="yt.analytics.trackEvent('Footer', 'link', 'About');">About</a></li>
+               <li><a href="/web/20120118121554/http://www.youtube.com/t/press" onmousedown="yt.analytics.trackEvent('Footer', 'link', 'Press');">Press &amp; Blogs</a></li>
+               <li><a href="/web/20120118121554/http://www.youtube.com/t/copyright_center" onmousedown="yt.analytics.trackEvent('Footer', 'link', 'Copyright');">Copyright</a></li>
+               <li><a href="/web/20120118121554/http://www.youtube.com/creators" onmousedown="yt.analytics.trackEvent('Footer', 'link', 'Creators');">Creators &amp; Partners</a></li>
+               <li><a href="/web/20120118121554/http://www.youtube.com/t/advertising_overview" onmousedown="yt.analytics.trackEvent('Footer', 'link', 'Advertising');">Advertising</a></li>
+               <li><a href="/web/20120118121554/http://www.youtube.com/dev">Developers</a></li>
+            </ul>
+            <ul id="footer-links-secondary">
+               <li><a href="/web/20120118121554/http://www.youtube.com/t/terms" onmousedown="yt.analytics.trackEvent('Footer', 'link', 'Terms');">Terms</a></li>
+               <li><a href="/web/20120118121554/http://www.youtube.com/t/privacy_at_youtube" onmousedown="yt.analytics.trackEvent('Footer', 'link', 'Privacy');">Privacy</a></li>
+               <li><a href="//web.archive.org/web/20120118121554/http://www.google.com/support/youtube/bin/request.py?contact_type=abuse&amp;hl=en_US" onmousedown="yt.analytics.trackEvent('Footer', 'link', 'Safety');">Safety</a></li>
+               <li><a href="//web.archive.org/web/20120118121554/http://www.google.com/tools/feedback/intl/en/error.html" onclick="return yt.www.feedback.start(yt.getConfig('FEEDBACK_LOCALE_LANGUAGE'), yt.getConfig('FEEDBACK_LOCALE_EXTRAS'));" id="reportbug">Report a bug</a></li>
+               <li><a href="/web/20120118121554/http://www.youtube.com/testtube">Try something new!</a></li>
+            </ul>
+            <ul class="pickers yt-uix-button-group" data-button-toggle-group="true">
+               <li>    <button type="button" class=" yt-uix-button yt-uix-button-text yt-uix-button-toggle" onclick="yt.www.masthead.loadPicker('language-picker', &quot;&quot;); return false;;return false;" data-button-menu-id="arrow" role="button"><span class="yt-uix-button-content">English </span><img class="yt-uix-button-arrow" src="//web.archive.org/web/20120118121554im_/http://s.ytimg.com/yt/img/pixel-vfl3z5WfW.gif" alt=""></button></li>
+               <li>    <button type="button" class=" yt-uix-button yt-uix-button-text yt-uix-button-toggle" onclick="yt.www.masthead.loadPicker('region-picker', &quot;&quot;); return false;;return false;" data-button-menu-id="arrow" role="button"><span class="yt-uix-button-content">Worldwide </span><img class="yt-uix-button-arrow" src="//web.archive.org/web/20120118121554im_/http://s.ytimg.com/yt/img/pixel-vfl3z5WfW.gif" alt=""></button></li>
+               <li>    <button type="button" class=" yt-uix-button yt-uix-button-text yt-uix-button-toggle" onclick="yt.www.masthead.loadPicker('safetymode-picker', &quot;&quot;);return false;" data-button-menu-id="arrow" role="button"><span class="yt-uix-button-content">Safety:
+                  <span class="yt-footer-safety-value">
+                  Off
+                  </span>
+                  </span><img class="yt-uix-button-arrow" src="//web.archive.org/web/20120118121554im_/http://s.ytimg.com/yt/img/pixel-vfl3z5WfW.gif" alt=""></button>
+               </li>
+            </ul>
+            <div id="picker-container"></div>
+            <div id="picker-loading" style="display: none">Loading...</div>
+         </div>
+      </div>
+   </div>
+   <div id="playlist-bar" class="hid passive editable" data-video-url="/watch?v=&amp;feature=BFql&amp;playnext=1&amp;list=QL" data-list-id="" data-list-type="QL">
+      <div id="playlist-bar-bar-container">
+         <div id="playlist-bar-bar">
+            <div id="playlist-bar-notifications" style="display: none;" class="yt-alert yt-alert-success yt-alert-small yt-alert-naked yt-rounded ">
+               <span class="yt-alert-icon"><img src="//web.archive.org/web/20120118121554im_/http://s.ytimg.com/yt/img/pixel-vfl3z5WfW.gif" class="icon master-sprite" alt="Alert icon"></span>
+               <div class="yt-alert-content"></div>
+            </div>
+            <span id="playlist-bar-info"><span class="playlist-bar-active playlist-bar-group"><button onclick=";return false;" title="Previous video" type="button" id="playlist-bar-prev-button" class="yt-uix-tooltip yt-uix-tooltip-masked  yt-uix-button yt-uix-tooltip yt-uix-button-empty" role="button"><img class="yt-uix-button-icon yt-uix-button-icon-playlist-bar-prev" src="//web.archive.org/web/20120118121554im_/http://s.ytimg.com/yt/img/pixel-vfl3z5WfW.gif" alt="Previous video"></button><span class="playlist-bar-count">0 / <span class="item-count">0</span></span><button type="button" class="yt-uix-tooltip yt-uix-tooltip-masked  yt-uix-button yt-uix-button-empty" onclick=";return false;" id="playlist-bar-next-button" role="button"><img class="yt-uix-button-icon yt-uix-button-icon-playlist-bar-next" src="//web.archive.org/web/20120118121554im_/http://s.ytimg.com/yt/img/pixel-vfl3z5WfW.gif" alt=""></button></span><span class="playlist-bar-active playlist-bar-group"><button type="button" class="yt-uix-tooltip yt-uix-tooltip-masked  yt-uix-button yt-uix-button-toggle yt-uix-button-empty" onclick=";return false;" id="playlist-bar-autoplay-button" role="button"><img class="yt-uix-button-icon yt-uix-button-icon-playlist-bar-autoplay" src="//web.archive.org/web/20120118121554im_/http://s.ytimg.com/yt/img/pixel-vfl3z5WfW.gif" alt=""></button><button type="button" class="yt-uix-tooltip yt-uix-tooltip-masked  yt-uix-button yt-uix-button-toggle yt-uix-button-empty" onclick=";return false;" id="playlist-bar-shuffle-button" role="button"><img class="yt-uix-button-icon yt-uix-button-icon-playlist-bar-shuffle" src="//web.archive.org/web/20120118121554im_/http://s.ytimg.com/yt/img/pixel-vfl3z5WfW.gif" alt=""></button></span><span class="playlist-bar-passive playlist-bar-group"><button onclick=";return false;" title="Play videos" type="button" id="playlist-bar-play-button" class="yt-uix-tooltip yt-uix-tooltip-masked  yt-uix-button yt-uix-tooltip yt-uix-button-empty" role="button"><img class="yt-uix-button-icon yt-uix-button-icon-playlist-bar-play" src="//web.archive.org/web/20120118121554im_/http://s.ytimg.com/yt/img/pixel-vfl3z5WfW.gif" alt="Play videos"></button><span class="playlist-bar-count"><span class="item-count">0</span></span></span><span id="playlist-bar-title" class="yt-uix-button-group"><span class="playlist-title">Unsaved Playlist</span></span></span>
+            <a id="playlist-bar-lists-back" href="#">
+            Return to active list
+            </a>
+            <span id="playlist-bar-controls"><span class="playlist-bar-group"><button type="button" class="yt-uix-tooltip yt-uix-tooltip-masked  yt-uix-button yt-uix-button-text yt-uix-button-empty" onclick=";return false;" id="playlist-bar-toggle-button" role="button"><img class="yt-uix-button-icon yt-uix-button-icon-playlist-bar-toggle" src="//web.archive.org/web/20120118121554im_/http://s.ytimg.com/yt/img/pixel-vfl3z5WfW.gif" alt=""></button></span><span class="playlist-bar-group"><button type="button" class="yt-uix-tooltip yt-uix-tooltip-masked yt-uix-button-reverse flip yt-uix-button yt-uix-button-text" onclick=";return false;" data-button-menu-id="playlist-bar-options-menu" data-button-has-sibling-menu="true" role="button"><span class="yt-uix-button-content">Options </span><img class="yt-uix-button-arrow" src="//web.archive.org/web/20120118121554im_/http://s.ytimg.com/yt/img/pixel-vfl3z5WfW.gif" alt=""></button></span></span>      
+         </div>
+      </div>
+      <div id="playlist-bar-tray-container">
+         <div id="playlist-bar-tray" class="yt-uix-slider yt-uix-slider-fluid">
+            <button class="yt-uix-button playlist-bar-tray-button yt-uix-slider-prev" onclick="return false;"><img class="yt-uix-slider-prev-arrow" src="//web.archive.org/web/20120118121554im_/http://s.ytimg.com/yt/img/pixel-vfl3z5WfW.gif" alt="Previous video"></button><button class="yt-uix-button playlist-bar-tray-button yt-uix-slider-next" onclick="return false;"><img class="yt-uix-slider-next-arrow" src="//web.archive.org/web/20120118121554im_/http://s.ytimg.com/yt/img/pixel-vfl3z5WfW.gif" alt="Next video"></button>
+            <div class="yt-uix-slider-body">
+               <div id="playlist-bar-tray-content" class="yt-uix-slider-slide">
+                  <ol class="video-list"></ol>
+                  <ol id="playlist-bar-help">
+                     <li class="empty playlist-bar-help-message">Your queue is empty. Add videos to your queue using this button: <img src="//web.archive.org/web/20120118121554im_/http://s.ytimg.com/yt/img/pixel-vfl3z5WfW.gif" class="addto-button-help"><br> or <a href="https://web.archive.org/web/20120118121554/https://accounts.google.com/ServiceLogin?uilel=3&amp;service=youtube&amp;passive=true&amp;continue=http%3A%2F%2Fwww.youtube.com%2Fsignin%3Faction_handle_signin%3Dtrue%26nomobiletemp%3D1%26hl%3Den_US%26next%3D%252F&amp;hl=en_US&amp;ltmpl=sso">sign in</a> to load a different list.</li>
+                  </ol>
+               </div>
+               <div class="yt-uix-slider-shade-left"></div>
+               <div class="yt-uix-slider-shade-right"></div>
+            </div>
+         </div>
+         <div id="playlist-bar-save"></div>
+         <div id="playlist-bar-lists" class="dark-lolz"></div>
+         <div id="playlist-bar-loading"><img src="//web.archive.org/web/20120118121554im_/http://s.ytimg.com/yt/img/pixel-vfl3z5WfW.gif" alt="Loading..."><span id="playlist-bar-loading-message">Loading...</span><span id="playlist-bar-saving-message" class="hid">Saving...</span></div>
+         <div id="playlist-bar-template" style="display: none;" data-video-thumb-url="//i4.ytimg.com/vi/__video_encrypted_id__/default.jpg">
+            <!--<li class="playlist-bar-item yt-uix-slider-slide-unit __classes__" data-video-id="__video_encrypted_id__"><a href="__video_url__" title="__video_title__"><span class="video-thumb ux-thumb ux-thumb-96 "><span class="clip"><span class="clip-inner"><img src="//s.ytimg.com/yt/img/pixel-vfl3z5WfW.gif" alt="__video_title__" data-thumb-manual="true" data-thumb="__video_thumb_url__" ><span class="vertical-align"></span></span></span></span><span class="screen"></span><span class="count"><strong>__list_position__</strong></span><span class="play"><img src="//s.ytimg.com/yt/img/pixel-vfl3z5WfW.gif"></span><span class="yt-uix-button delete"><img class="yt-uix-button-icon-playlist-bar-delete" src="//s.ytimg.com/yt/img/pixel-vfl3z5WfW.gif" alt="Delete"></span><span class="now-playing">Now playing</span><span dir="ltr" class="title"><span>__video_title__  <span class="uploader">by __video_username__</span>
+               </span></span><span class="dragger"></span></a></li>-->
+         </div>
+         <div id="playlist-bar-next-up-template" style="display: none;">
+            <!--<div class="playlist-bar-next-thumb"><span class="video-thumb ux-thumb ux-thumb-64 "><span class="clip"><span class="clip-inner"><img src="//i4.ytimg.com/vi/__video_encrypted_id__/default.jpg" alt="Thumbnail
+               " ><span class="vertical-align"></span></span></span></span></div>-->
+         </div>
+      </div>
+      <div id="playlist-bar-options-menu" class="hid">
+         <div id="playlist-bar-extras-menu">
+            <ul>
+               <li><span class="yt-uix-button-menu-item" data-action="clear">
+                  Clear all videos from this list
+                  </span>
+               </li>
+            </ul>
+         </div>
+         <ul>
+            <li><span class="yt-uix-button-menu-item" onclick="window.location.href='https://web.archive.org/web/20120118121554/http://www.google.com/support/youtube/bin/answer.py?answer=146749'">Learn more</span></li>
+         </ul>
+      </div>
+   </div>
+   <div id="shared-addto-menu" style="display: none;" class="hid sign-in">
+      <div class="addto-menu">
+         <div id="addto-list-panel" class="menu-panel active-panel">
+            <span class="yt-uix-button-menu-item yt-uix-tooltip sign-in" data-possible-tooltip="" data-tooltip-show-delay="750"><a class="sign-in-link">Sign in</a> to add this to a playlist
+            </span>
+         </div>
+         <div id="addto-list-saved-panel" class="menu-panel">
+            <div class="panel-content">
+               <img src="//web.archive.org/web/20120118121554im_/http://s.ytimg.com/yt/img/pixel-vfl3z5WfW.gif">
+               <span class="message">Added to <span class="addto-title yt-uix-tooltip yt-uix-tooltip-reverse" title="More information about this playlist" data-tooltip-show-delay="750"></span></span>
+            </div>
+         </div>
+         <div id="addto-list-error-panel" class="menu-panel">
+            <div class="panel-content">
+               <img src="//web.archive.org/web/20120118121554im_/http://s.ytimg.com/yt/img/pixel-vfl3z5WfW.gif">
+               <span class="error-details"></span>
+               <a class="show-menu-link">Back to list</a>
+            </div>
+         </div>
+         <div id="addto-note-input-panel" class="menu-panel">
+            <div class="panel-content">
+               <img src="//web.archive.org/web/20120118121554im_/http://s.ytimg.com/yt/img/pixel-vfl3z5WfW.gif">
+               <span class="message">Added to playlist:</span>
+               <span class="addto-title yt-uix-tooltip" title="More information about this playlist" data-tooltip-show-delay="750"></span>
+            </div>
+            <div class="yt-uix-char-counter" data-char-limit="150">
+               <div class="addto-note-box addto-text-box"><textarea id="addto-note" class="addto-note yt-uix-char-counter-input" maxlength="150"></textarea><label for="addto-note" class="addto-note-label">Add an optional note</label></div>
+               <span class="yt-uix-char-counter-remaining">150</span>
+            </div>
+            <button disabled="disabled" type="button" class="playlist-save-note yt-uix-button" onclick=";return false;" role="button"><span class="yt-uix-button-content">Add note </span></button>
+         </div>
+         <div id="addto-note-saving-panel" class="menu-panel">
+            <div class="panel-content loading-content">
+               <img src="//web.archive.org/web/20120118121554im_/http://s.ytimg.com/yt/img/pixel-vfl3z5WfW.gif">
+               <span>Saving note...</span>
+            </div>
+         </div>
+         <div id="addto-note-saved-panel" class="menu-panel">
+            <div class="panel-content">
+               <img src="//web.archive.org/web/20120118121554im_/http://s.ytimg.com/yt/img/pixel-vfl3z5WfW.gif">
+               <span class="message">Note added to:</span>
+            </div>
+         </div>
+         <div id="addto-note-error-panel" class="menu-panel">
+            <div class="panel-content">
+               <img src="//web.archive.org/web/20120118121554im_/http://s.ytimg.com/yt/img/pixel-vfl3z5WfW.gif">
+               <span class="message">Error adding note:</span>
+               <ul class="error-details"></ul>
+               <a class="add-note-link">Click to add a new note</a>
+            </div>
+         </div>
+         <div class="close-note hid">
+            <img src="//web.archive.org/web/20120118121554im_/http://s.ytimg.com/yt/img/pixel-vfl3z5WfW.gif" class="close-button">
+         </div>
+      </div>
+   </div>
+   <!-- end pagebottom -->
+</div>
+<!-- end page -->
       <script>
          yt.setMsg({
            'LIST_CLEARED': "List cleared",
