--- a/templates/2012e/index.twig
+++ b/templates/2012e/index.twig
@@ -7,8 +7,8 @@
    <!-- begin pagetop -->
    <div id="masthead-container">
       <div id="masthead" class="" dir="ltr">
-         <a id="logo-container" href="/web/20120118121554/http://www.youtube.com/" title="YouTube home">
-         <img id="logo" src="//web.archive.org/web/20120118121554im_/http://s.ytimg.com/yt/img/pixel-vfl3z5WfW.gif" alt="YouTube home">
+         <a id="logo-container" href="/" title="squareBracket home">
+         <img id="logo" src="//web.archive.org/web/20120118121554im_/http://s.ytimg.com/yt/img/pixel-vfl3z5WfW.gif" alt="squareBracket home">
          </a>
          <div id="masthead-user-bar-container">
             <div id="masthead-user-bar">
