guide ajax prototype

--- a/templates/2012e/_layout.twig
+++ b/templates/2012e/_layout.twig
@@ -41,7 +41,7 @@
          yt.setConfig('FEEDBACK_LOCALE_LANGUAGE', "en");
          yt.setConfig('FEEDBACK_LOCALE_EXTRAS', {"experiments": "", "accept_language": null});
       </script>
-      <script src="//web.archive.org/web/20120118121554js_/http://s.ytimg.com/yt/jsbin/www-guide-vflWpevZ9.js"></script>
+      <script src="/assets/2012/js/www-guide-vflWpevZ9.js"></script>
       <script>
          window.masthead = new yt.www.ads.MastheadAd(1,
              "cKnMIqjcLMg",
